data/linux_kernel_850.txt
If CONFIG_DRM_LONTIUM_LT8912B=m, the following errors will be seen while<br>
compiling lontium-lt8912b.c<br>
<br>
drivers/gpu/drm/bridge/lontium-lt8912b.c: In function<br>
‘lt8912_hard_power_on’:<br>
drivers/gpu/drm/bridge/lontium-lt8912b.c:252:2: error: implicit<br>
declaration of function ‘gpiod_set_value_cansleep’; did you mean<br>
‘gpio_set_value_cansleep’? [-Werror=implicit-function-declaration]<br>
  gpiod_set_value_cansleep(lt->gp_reset, 0);<br>
  ^~~~~~~~~~~~~~~~~~~~~~~~<br>
  gpio_set_value_cansleep<br>
drivers/gpu/drm/bridge/lontium-lt8912b.c: In function ‘lt8912_parse_dt’:<br>
drivers/gpu/drm/bridge/lontium-lt8912b.c:628:13: error: implicit<br>
declaration of function ‘devm_gpiod_get_optional’; did you mean<br>
‘devm_gpio_request_one’? [-Werror=implicit-function-declaration]<br>
  gp_reset = devm_gpiod_get_optional(dev, "reset", GPIOD_OUT_HIGH);<br>
             ^~~~~~~~~~~~~~~~~~~~~~~<br>
             devm_gpio_request_one<br>
drivers/gpu/drm/bridge/lontium-lt8912b.c:628:51: error: ‘GPIOD_OUT_HIGH’<br>
undeclared (first use in this function); did you mean ‘GPIOF_INIT_HIGH’?<br>
  gp_reset = devm_gpiod_get_optional(dev, "reset", GPIOD_OUT_HIGH);<br>
                                                   ^~~~~~~~~~~~~~<br>
                                                   GPIOF_INIT_HIGH<br>
<br>
Signed-off-by: Zhang Jianhua <zhangjianhua18@xxxxxxxxxx><br>
Reviewed-by: Robert Foss <robert.foss@xxxxxxxxxx><br>
---<br>
v2:<br>
- add header file <linux/gpio/consumer.h> for lontium-lt8912b.c instead<br>
  of add config dependence for CONFIG_DRM_LONTIUM_LT8912B<br>
v3:<br>
- change the #include in alphabetical order<br>
---<br>
 drivers/gpu/drm/bridge/lontium-lt8912b.c | 1 +<br>
 1 file changed, 1 insertion(+)<br>
<br>
diff --git a/drivers/gpu/drm/bridge/lontium-lt8912b.c b/drivers/gpu/drm/bridge/lontium-lt8912b.c<br>
index 61491615bad0..4f693123985b 100644<br>
--- a/drivers/gpu/drm/bridge/lontium-lt8912b.c<br>
+++ b/drivers/gpu/drm/bridge/lontium-lt8912b.c<br>
@@ -5,6 +5,7 @@<br>
 <br>
 #include <linux/device.h><br>
 #include <linux/delay.h><br>
+#include <linux/gpio/consumer.h><br>
 #include <linux/i2c.h><br>
 #include <linux/gpio.h><br>
 #include <linux/of_gpio.h><br>
-- <br>
2.17.1<br>
<br>
<br>

